Fix centre alignment for footer

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,6 +18,7 @@ a:focus {
     color: #FFFFFF;
     height: 100vh;
     text-transform: uppercase;
+    padding: 0;
 }
 
 .sidebar .header {
@@ -54,6 +55,10 @@ a:focus {
     color: #e62c33;
 }
 
+.nav>li>a {
+    padding: 10px 30px;
+}
+
 .nav>li>a:focus, 
 .nav>li>a:hover {
     text-decoration: none;
@@ -63,8 +68,9 @@ a:focus {
 
 .footer {
     position: absolute;
-    bottom: 0;
-    margin: 10px 20px
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
 }
 
 .footer ul {
